--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ProjectE
-version: '0.2.0'
+version: '0.2.1'
 main: org.Little_100.projecte.ProjectE
-api-version: '1.16'
+api-version: '1.14'
 folia-supported: true
 authors: [ Little_100 ]
 description: ProjectE插件(原名贤者之石插件但是突然感觉性质变了就改名ProjectE了)
@@ -10,7 +10,12 @@ commands:
   projecte:
     description: "ProjectE插件主命令"
     usage: "/projecte <sub-command>"
-    aliases: [ projecte ]
+    aliases: [ po ]
+    subcommands:
+      bag:
+        description: "Opens the Alchemical Bag."
+        usage: "/projecte bag"
+        permission: projecte.command.bag
 permissions:
   projecte.command.setemc:
     description: "允许设置物品的EMC值"
